refactor core files

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 Options -MultiViews
 RewriteEngine On
-RewriteBase /mvc/public
+RewriteBase /LightMvc-framework/public
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
